; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/controls/extr_ghost.c_Ghost_OnNCPaint.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/controls/extr_ghost.c_Ghost_OnNCPaint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WM_NCPAINT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i64)* @Ghost_OnNCPaint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Ghost_OnNCPaint(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %3
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @WM_NCPAINT, align 4
  %13 = load i64, i64* %5, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i32 @DefWindowProcW(i32 %11, i32 %12, i32 %14, i32 0)
  br label %22

16:                                               ; preds = %3
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @WM_NCPAINT, align 4
  %19 = load i64, i64* %5, align 8
  %20 = trunc i64 %19 to i32
  %21 = call i32 @DefWindowProcA(i32 %17, i32 %18, i32 %20, i32 0)
  br label %22

22:                                               ; preds = %16, %10
  %23 = load i32, i32* %4, align 4
  %24 = call i64 @GetWindowDC(i32 %23)
  store i64 %24, i64* %7, align 8
  %25 = load i64, i64* %7, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %34

27:                                               ; preds = %22
  %28 = load i32, i32* %4, align 4
  %29 = load i64, i64* %7, align 8
  %30 = call i32 @Ghost_OnDraw(i32 %28, i64 %29)
  %31 = load i32, i32* %4, align 4
  %32 = load i64, i64* %7, align 8
  %33 = call i32 @ReleaseDC(i32 %31, i64 %32)
  br label %34

34:                                               ; preds = %27, %22
  ret void
}

declare dso_local i32 @DefWindowProcW(i32, i32, i32, i32) #1

declare dso_local i32 @DefWindowProcA(i32, i32, i32, i32) #1

declare dso_local i64 @GetWindowDC(i32) #1

declare dso_local i32 @Ghost_OnDraw(i32, i64) #1

declare dso_local i32 @ReleaseDC(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
